A3/tests/test2.c.err
syntax error
sclp error: File: tests/test2.c, Line: 1: Cannot parse the input program
