A3/tests/test2.c.mytoks
	Token Name: VOID 	Token: void 	 Lineno: 1
	Token Name: NAME 	Token: main 	 Lineno: 1
	Token Name: META CHAR 	Token: ( 	 Lineno: 1
	Token Name: META CHAR 	Token: ) 	 Lineno: 1
	Token Name: META CHAR 	Token: { 	 Lineno: 1
	Token Name: INTEGER 	Token: int 	 Lineno: 3
	Token Name: NAME 	Token: p 	 Lineno: 3
	Token Name: META CHAR 	Token: , 	 Lineno: 3
	Token Name: NAME 	Token: sa 	 Lineno: 4
	Token Name: META CHAR 	Token: , 	 Lineno: 4
	Token Name: NAME 	Token: qwer 	 Lineno: 4
	Token Name: META CHAR 	Token: , 	 Lineno: 5
	Token Name: NAME 	Token: wert 	 Lineno: 5
	Token Name: META CHAR 	Token: , 	 Lineno: 5
	Token Name: NAME 	Token: et 	 Lineno: 6
	Token Name: META CHAR 	Token: ; 	 Lineno: 6
	Token Name: INTEGER 	Token: int 	 Lineno: 8
	Token Name: NAME 	Token: x 	 Lineno: 8
	Token Name: META CHAR 	Token: ; 	 Lineno: 8
	Token Name: INTEGER 	Token: int 	 Lineno: 9
	Token Name: ASSIGN_OP 	Token: = 	 Lineno: 9
